# NIDS

./: .clang-tidy  .clangd  .dockerignore  .gitattributes  .gitignore  2026-03-20-111308-resolv-all-lsp-issue-from-my-clion-using-the-jetbr.txt  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Doxyfile  FindPCAP.cmake  INSTALL.md  LICENSE  README.md  SECURITY.md  conanfile.py  config.example.json  config.json  docker-compose.ci.yml  docker-compose.sonarqube.yml  docker-compose.yml  dump.pcap  main.cpp  sonar-project.properties  sonar-qt-compat.h  vcpkg.json
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: Doxyfile  (+5 more)
src/app/: AnalysisService.cpp  AnalysisService.h  BypassManager.cpp  BypassManager.h  CMakeLists.txt  CaptureController.cpp  CaptureController.h  FlowAnalysisWorker.cpp  FlowAnalysisWorker.h  HeadlessCaptureRunner.cpp  HeadlessCaptureRunner.h  HuntEngine.cpp  HuntEngine.h  HybridDetectionService.cpp  HybridDetectionService.h  LiveDetectionPipeline.cpp  LiveDetectionPipeline.h  OutputSinkFactory.cpp  OutputSinkFactory.h  PipelineFactory.cpp  PipelineFactory.h  ReportGenerator.cpp  ReportGenerator.h  SetupWizard.cpp  SetupWizard.h  SinkChain.cpp  SinkChain.h  VerdictEngine.cpp  VerdictEngine.h
src/app/commands/: CaptureCommands.cpp  CaptureCommands.h
src/client/: CMakeLists.txt  NidsClient.cpp  NidsClient.h  cli_main.cpp
src/core/: CMakeLists.txt
src/core/concurrent/: BoundedQueue.h
src/core/math/: WelfordAccumulator.h
src/core/model/: AnomalyResult.h  AttackType.h  CaptureSession.cpp  CaptureSession.h  ContentMatch.h  CorrelationCriteria.h  DetectionResult.h  DetectionSource.h  FlowConstants.h  FlowInfo.h  FlowKey.h  FlowQuery.h  HuntResult.h  IndexedFlow.h  PacketFilter.cpp  PacketFilter.h  PacketInfo.cpp  PacketInfo.h  PacketVerdict.h  PredictionResult.h  ProtocolConstants.h  RuleMatch.h  SignatureMatch.h  SnortRule.h  ThreatIntelMatch.h  TimelineEvent.h
src/core/services/: BoundedQueue.h  Configuration.cpp  Configuration.h  IAnalysisRepository.h  ICommand.h  IContentScanner.h  IFeatureNormalizer.h  IFlowExtractor.h  IFlowIndex.h  IHuntEngine.h  IInlineCapture.h  IOutputSink.h  IPacketAnalyzer.h  IPacketCapture.h  IPcapStore.h  IRuleEngine.h  ISignatureEngine.h  IThreatIntelligence.h  PacketFilter.cpp  PacketFilter.h  ServiceRegistry.cpp  ServiceRegistry.h
src/infra/: CMakeLists.txt
src/infra/analysis/: AnalyzerFactory.cpp  AnalyzerFactory.h  FdeepAnalyzer.cpp  FdeepAnalyzer.h  FeatureNormalizer.cpp  FeatureNormalizer.h  OnnxAnalyzer.cpp  OnnxAnalyzer.h
src/infra/capture/: AfPacketCapture.cpp  AfPacketCapture.h  PcapCapture.cpp  PcapCapture.h  PcapCaptureWorker.cpp  PcapCaptureWorker.h  PcapHandle.h
src/infra/config/: ConfigLoader.cpp  ConfigLoader.h
src/infra/flow/: CsvFlowProcessor.cpp  CsvFlowProcessor.h  FlowKey.h  FlowStats.cpp  FlowStats.h  NativeFlowExtractor.cpp  NativeFlowExtractor.h  TcpReassembler.cpp  TcpReassembler.h
src/infra/output/: CefFormatter.cpp  CefFormatter.h  ConsoleAlertSink.cpp  ConsoleAlertSink.h  JsonFileSink.cpp  JsonFileSink.h  LeefFormatter.cpp  LeefFormatter.h  SyslogSink.cpp  SyslogSink.h
src/infra/parsing/: PacketParser.cpp  PacketParser.h
src/infra/platform/: AsanOptions.h  DelayLoadHook.cpp  NetfilterBlocker.cpp  NetfilterBlocker.h  NetworkHeaders.h  SignalHandler.h  SocketInit.cpp  SocketInit.h
src/infra/rules/: HeuristicRuleEngine.cpp  HeuristicRuleEngine.h  RuleVariableStore.cpp  RuleVariableStore.h  SnortRuleEngine.cpp  SnortRuleEngine.h  SnortRuleParser.cpp  SnortRuleParser.h  YaraScanner.cpp  YaraScanner.h
src/infra/storage/: PcapRingBuffer.cpp  PcapRingBuffer.h  SqliteFlowIndex.cpp  SqliteFlowIndex.h
src/infra/threat/: ThreatIntelProvider.cpp  ThreatIntelProvider.h
src/server/: CMakeLists.txt  GrpcStreamSink.cpp  GrpcStreamSink.h  NidsServer.cpp  NidsServer.h  NidsServiceImpl.cpp  NidsServiceImpl.h  ServerConfig.h  server_main.cpp
src/ui/: CMakeLists.txt  DetectionDetailWidget.cpp  DetectionDetailWidget.h  FilterPanel.cpp  FilterPanel.h  FlowTableModel.cpp  FlowTableModel.h  FullListDialog.cpp  HexAsciiDisplay.cpp  HexView.cpp  HexView.h  MainWindow.cpp  MainWindow.h  PacketTableModel.cpp  PacketTableModel.h  QtStringConversions.h  ServerDashboard.cpp  ServerDashboard.h  WeightTuningDialog.cpp  WeightTuningDialog.h  resources.qrc  ui.cpp  ui.moc
src/ui/dialogs/: ServiceDialog.cpp  ServiceDialog.h
tests/: CMakeLists.txt
tests/data/: test_rules.yar  test_snort.rules
tests/helpers/: MockAnalyzer.h  MockFlowExtractor.h  MockNormalizer.h  MockOutputSink.h  MockPacketCapture.h  MockRuleEngine.h  MockThreatIntel.h  PcapTestHelpers.h  TestFixtures.h  TestHelpers.h
tests/integration/: test_Pipeline.cpp
tests/stress/: StressTestHelpers.h  test_ConcurrentAnalysis.cpp  test_EndToEndPipeline.cpp  test_FlowExtractionLoad.cpp  test_MemoryStress.cpp  test_MlInferenceLatency.cpp  test_PacketThroughput.cpp  test_RuleEngineBenchmark.cpp
tests/unit/: test_AnalysisService.cpp  test_AttackType.cpp  test_BoundedQueue.cpp  test_BypassManager.cpp  test_CaptureCommands.cpp  test_CaptureController.cpp  test_CaptureSession.cpp  test_CefFormatter.cpp  test_Configuration.cpp  test_ConsoleAlertSink.cpp  test_DetectionResult.cpp  test_FeatureNormalizer.cpp  test_FlowAnalysisWorker.cpp  test_FlowExtractorBatch.cpp  test_FlowExtractorCallback.cpp  test_FlowExtractorLive.cpp  test_FlowKey.cpp  test_FlowStats.cpp  test_HeadlessCaptureRunner.cpp  test_HeuristicRuleEngine.cpp  test_HuntEngine.cpp  test_HybridDetectionService.cpp  test_InterfaceDestructors.cpp  test_JsonFileSink.cpp  test_LeefFormatter.cpp  test_LiveDetectionPipeline.cpp  test_NativeFlowExtractor.cpp  test_NetfilterBlocker.cpp  test_OnnxAnalyzer.cpp  test_OutputSinkFactory.cpp  test_PacketFilter.cpp  test_PcapRingBuffer.cpp  test_PipelineFactory.cpp  test_PredictionResult.cpp  test_ProtocolConstants.cpp  test_ReportGenerator.cpp  test_RuleVariableStore.cpp  test_ServiceRegistry.cpp  test_SinkChain.cpp  test_SnortRuleEngine.cpp  (+8 more)
(+98 files in other folders)
